# bandhannova-search-engine

./: .env.example  .gitignore  Dockerfile.railway  LOCAL_SETUP.md  RAILWAY_DEPLOY.md  README.md  RENDER_DEPLOY_BENGALI.md  SUPABASE_SETUP.md  nixpacks.toml  railway.json  render.yaml
api/: README.md  go.mod  go.sum  main.go
crawler/: Cargo.toml  README.md
crawler/src/: crawler.rs  fetcher.rs  indexer_client.rs  main.rs  parser.rs
database/: schema.sql
docs/: DEPLOYMENT.md
meilisearch/: Dockerfile  index_config.json
scripts/: install-dependencies.sh  setup-database.sh  start-services.sh  stop-services.sh
